--- a/index.html
+++ b/index.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>TherapyCove – Coming Soon</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-    body { margin:0; padding:0; font-family:sans-serif; color:#333; display:flex;
-      align-items:center; justify-content:center; height:100vh; background:#f4f4f4; }
-    .container { text-align:center; padding:20px; max-width:400px; }
-    h1 { font-size:2rem; margin-bottom:0.5rem; color:#2a2a72; }
-    p { margin:0.5rem 0 1rem; }
-    .logo { max-width:150px; margin-bottom:1rem; }
-    .email { margin-top:1rem; font-size:0.9rem; color:#555; }
-  </style>
+    <meta charset="utf-8">
+    <title>TherapyCove – Coming Soon</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+            color: #333;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background: #f4f4f4;
+        }
+
+        .container {
+            text-align: center;
+            padding: 20px;
+            max-width: 400px;
+        }
+
+        h1 {
+            font-size: 2rem;
+            margin-bottom: 0.5rem;
+            color: #2a2a72;
+        }
+
+        p {
+            margin: 0.5rem 0 1rem;
+        }
+
+        .logo {
+            max-width: 150px;
+            margin-bottom: 1rem;
+        }
+
+        .email {
+            margin-top: 1rem;
+            font-size: 0.9rem;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <!-- replace src with your logo path -->
+<div class="container">
     <h1>TherapyCove is Coming Soon</h1>
     <p>Providing compassionate psychotherapy sessions in a supportive space.</p>
     <p>Launching shortly—stay tuned.</p>
-    <p class="email">Questions? Email us at info@therapycove.gr</p>
-  </div>
+    <!--    <p class="email">Questions? Email us at info@therapycove.gr</p>-->
+</div>
 </body>
 </html>
