fix(site): make 404 page english-only across locales

--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="el">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 | Σελίδα δεν βρέθηκε</title>
+    <title>404 | Page Not Found</title>
     <link rel="icon" href="/assets/images/favicon.ico" sizes="any">
     <link rel="stylesheet" href="/assets/404/tokens.css">
     <link rel="stylesheet" href="/assets/404/therapy-cove.css">
@@ -678,19 +678,19 @@
 
           <div class="col-md-6 align-self-center error-404__copy">
             <p class="error-404__code" aria-label="Error code">404</p>
-            <h1 id="error-title">Η σελίδα δεν βρέθηκε.</h1>
+            <h1 id="error-title">Page not found.</h1>
             <p class="error-404__message">
-              Η διεύθυνση που άνοιξες δεν αντιστοιχεί σε διαθέσιμη σελίδα.
-              Συνέχισε από την αρχική ή πήγαινε στην ενότητα επικοινωνίας.
+              The address you opened does not match an available page.
+              Continue from the homepage or go to the contact section.
             </p>
 
             <div class="error-404__actions">
-              <a id="home-link" class="btn green" href="/#home">Αρχική</a>
-              <a class="btn ghost" href="/#contact">Επικοινωνία</a>
+              <a id="home-link" class="btn green" href="/#home">Home</a>
+              <a class="btn ghost" href="/#contact">Contact</a>
             </div>
 
             <p class="error-404__meta">
-              Ζητούμενη διαδρομή:
+              Requested path:
               <code id="requested-path">/</code>
             </p>
           </div>
