--- a/404.html
+++ b/404.html
@@ -678,9 +678,9 @@
 
           <div class="col-md-6 align-self-center error-404__copy">
             <p class="error-404__code" aria-label="Error code">404</p>
-            <h1 id="error-title">Page not found.</h1>
+            <h1 id="error-title">Uh Oh! You're lost.</h1>
             <p class="error-404__message">
-              The address you opened does not match an available page.
+              The page you are looking for does not exist. How you got here is a mystery.
               Continue from the homepage or go to the contact section.
             </p>
 
