fix(404): redirect unknown routes to localized sections

--- a/404.html
+++ b/404.html
@@ -686,7 +686,7 @@
 
             <div class="error-404__actions">
               <a id="home-link" class="btn green" href="/#home">Home</a>
-              <a class="btn ghost" href="/#contact">Contact</a>
+              <a id="contact-link" class="btn ghost" href="/#contact">Contact</a>
             </div>
 
             <p class="error-404__meta">
